[gd_scene load_steps=2 format=3 uid="uid://b0eeeh21gps0c"]

[ext_resource type="Script" uid="uid://c7dutxkonass7" path="res://scripts/finishMenu.gd" id="1_uvphl"]

[node name="FinishMenu" type="Node2D"]
script = ExtResource("1_uvphl")

[node name="TitleLabel" type="Label" parent="."]
offset_left = 435.0
offset_top = 23.0
offset_right = 631.0
offset_bottom = 160.0
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 100
text = "Eri"
horizontal_alignment = 1

[node name="TitleLabel2" type="Label" parent="TitleLabel"]
layout_mode = 0
offset_left = 99.0
offset_top = 93.0
offset_right = 295.0
offset_bottom = 152.0
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 24
text = "Unfair"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 251.0
offset_top = 515.0
offset_right = 897.0
offset_bottom = 579.0
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_font_sizes/font_size = 46
text = "تبریک شما با موفقیت اسکل شدید!"
horizontal_alignment = 1
language = "fa"

[node name="ResCode" type="Label" parent="."]
offset_left = 439.0
offset_top = 411.0
offset_right = 692.0
offset_bottom = 477.0
theme_override_font_sizes/font_size = 20

[node name="Options" type="VFlowContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 456.0
offset_top = 235.0
offset_right = 731.0
offset_bottom = 445.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="FullscreenButton" type="Button" parent="Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "    تمام صفحه    "

[node name="QuitButton" type="Button" parent="Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "خروج"

[connection signal="pressed" from="Options/FullscreenButton" to="." method="_on_fullscreen_button_pressed"]
[connection signal="pressed" from="Options/QuitButton" to="." method="_on_quit_button_pressed"]
